# vulnmind-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_submission.py  generate_icon.py
src/vulnmind_ai/: __init__.py  agents.py  cli.py  models.py  rules.py
src/vulnmind_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_scan.py
xiaomi_submission/: application_email_template.md  demo_script.md  form_fill_guide.md  publish_steps.md  store_metadata.md  submission_checklist.md
xiaomi_submission/workspace_template/: README.md  config.json
xiaomi_submission/workspace_template/Profile/: profile.md
xiaomi_submission/workspace_template/Prompt/: system_prompt.md
xiaomi_submission/workspace_template/Skill/: secure_code_review.md
