[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnmind-ai"
version = "0.1.0"
description = "AI-assisted secure code review agent for source repositories."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex Workspace" }
]
dependencies = []

[project.scripts]
vulnmind = "vulnmind_ai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
